Sun Jun 29 18:33:33 2008  Tanaka Akira  <akr@fsij.org>

	* process.c: include sys/resource.h if HAVE_SYS_RESOURCE_H is defined.
	  pointed by TOYOFUKU Chikanobu.  [ruby-dev:35258]

Sun Jun 29 18:26:01 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* variable.c (rb_f_trace_var): should not be allowed at safe level 4.  
	  a patch from Keita Yamaguchi <keita.yamaguchi at gmail.com>.

	* eval.c (rb_call0): wrong condition to check insecure method.
	  a patch from Keita Yamaguchi <keita.yamaguchi at gmail.com>.

Sun Jun 29 18:22:52 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_fill): not depend on unspecified behavior at integer
	  overflow.  reported by Vincenzo Iozzo <snagg AT openssl.it>.

Sun Jun 29 18:22:06 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c(ole_invoke): fix memory leak.
	  [ruby-bugs-20792]

Sun Jun 29 18:19:11 2008  Akinori MUSHA  <knu@iDaemons.org>

	* eval.c (PUSH_FRAME, PUSH_CLASS): Add volatile to avoid a
	  possible optimization bug on OS X/PPC.  This at least makes
	  build with gcc -O1 and `make test' pass.

Sun Jun 29 17:24:43 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/parsers/parse_rb.rb (RDoc#collect_first_comment): skip
	  magic comment.

Sun Jun 29 17:22:09 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_each, strio_readlines): IO#each and
	  IO#readlines do not affect $_.  [ruby-core:17277]

Sun Jun 29 17:19:59 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_readline, strio_each)
	  (strio_readlines): set lastline.  [ruby-core:17257]

Sun Jun 29 17:15:49 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/openssl/ossl.h: include winsock.h if USE_WINSOCK2 is not defined.
	  a patch from arton <artonx at yahoo.co.jp> in [ruby-dev:35078]

Sun Jun 29 17:09:48 2008  wanabe  <s.wanabe@gmail.com>

	* util.c (ruby_strtod): ruby_strtod don't allow a trailing
	  decimal point like "7.". [ruby-dev:34835] [ruby-dev:35009]
