@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2008-06-29"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20080629
-#define RUBY_PATCHLEVEL 34
+#define RUBY_PATCHLEVEL 35
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
